[B]1.2.10[/B]
- Resolve method in directory has got the live parameter for DASH
- Sortmethods have unsorted as default parameter/method

[B]1.2.9[/B]
- Added DASH parameters in directory.resolve function (optional)

[B]1.2.8[/B]
- Log function tweaks

[B]1.2.7[/B]
- Added utf-8 encoding for title parameter in directory module
- Cosmetics

[B]1.2.6[/B]
- Changes to sort methods from plain integers to module variables

[B]1.2.5[/B]
- Added plot, name, genre quote_plus in directory module
- Added sortmethods in control module
- Added conditional in youtube play module so it can be called with setresolved url method

[B]1.2.4[/B]
- Added title parameter for url calls in directory module

[B]1.2.3[/B]
- Added setting for youtube streams

[B]1.2.2[/B]
- Slight tweak in addonmedia method
- Deprecated sysicon variable in directory module

[B]1.2.1[/B]
- Added waitForAbort method in control module (and monitor)

[B]1.2.0[/B]
- Added conditional for youtube play_link
- Merged youtube & trailer modules
- Added downloader module (untested)
- Made requests module optional
- Removed print statements from client module
- Code cosmetics

[B]1.1.4[/B]
- Fixed error in urllib import
- Minor changes in trailer module
- Code cosmetics

[B]1.1.3[/B]
- Improved retriever function by overriding default user agent

[B]1.1.2[/B]
- Improved Agent appender function (now called spoofer)
- New function to delete instead of clearing cache file (old function preserved)
- Various code cosmetics

[B]1.1.1[/B]
- Simplified log module

[B]1.1.0[/B]
- Log module from tknorris shared
- Made __init__ module into init
- Added parsedom 2 thanks to tknorris

[B]1.0.9[/B]
- Workaround to prevent flooding log with "unsupported protocol" messages

[B]1.0.8[/B]
- New optional mobile user agent
- Minor fix in input dialog
- Added parameter in clear cache to override yesno dialog

[B]1.0.7[/B]
- Removed lite modules
- Added theme parameter for addonmedia function

[B]1.0.6[/B]
- Updated parsedom module