@@ -1,3 +1,12 @@
+[B]1.3.0[/B]
+- New json-rpc methods introduced
+- LFed a few modules
+- Reorganised imports in control module
+- Add dash urlquote_plus
+- Removed live dash parameter from directory.resolve
+- Improved dash conditional
+- Various cosmetics
+
 [B]1.2.10[/B]
 - Resolve method in directory has got the live parameter for DASH
 - Sortmethods have unsorted as default parameter/method
